fix content spacing

--- a/app/src/stylesheets/_variables.scss
+++ b/app/src/stylesheets/_variables.scss
@@ -1,1 +1,3 @@
 $green: #00965e;
+
+$bullet: "https://static.bnpparibasfortis.be/Images/images/Icons/bullet_green.png";
