--- a/app/src/stylesheets/components/_topic.scss
+++ b/app/src/stylesheets/components/_topic.scss
@@ -1,14 +1,18 @@
 .topic {
 	box-sizing: border-box;
 	background-color: #fff;
-	border-top: 1px solid #e5e9ef;
-	border-left: 1px solid #e5e9ef;
+/*	border-top: 1px solid #e5e9ef;
+	border-left: 1px solid #e5e9ef;*/
 	border-bottom: 1px solid #e5e9ef;
 	min-height: 180px;
 	box-sizing: border-box;
 	
 	&:first-child {
-		border: 1px solid #e5e9ef;
+		border-left: 1px solid #e5e9ef;
+	}
+	
+	&:last-child {
+		border-right: 1px solid #e5e9ef;
 	}
 	
 	img {
@@ -16,20 +20,15 @@
 	}
 	
 	h2 {
-		/*padding: 0 1em 0.5em;*/
 		padding: 0;
 		margin: 0;
 		text-align: center;
 	}
 	
-	&:last-child {
-		border-right: 1px solid #e5e9ef;
-	}
-	
 	&.active,
 	&:hover {
-		border: 1px solid transparent;
-		background-color: initial;
+		border-bottom: 1px solid transparent;
+		background-color: #fafafa;
 		img,
 		h2 {
 			opacity: 1;
